# parking-arrows

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Config.h  LicensePlateRecognizer.h
init_script/: parking_arrows.sh
src/: Camera.cpp  Config.cpp  LicensePlateRecognizer.cpp  main.cpp
test/: test.cpp
